apps/paddock/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paddock
  namespace: managoat-demos
  labels:
    app: paddock
spec:
  type: ClusterIP
  selector:
    app: paddock
  ports:
    - port: 80
      targetPort: 8080
